# lumiress

./: .bandit  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  sonar-project.properties
.github/: readme.md
.github/workflows/: codecov.yml  codeql-analysis.yml  readme.md  semgrep.yml  sonarscan.yml
assets/: readme.md
notebooks/: example.ipynb  readme.md
scripts/: readme.md
src/lumiress/: __init__.py
src/lumiress/infer/: mirnetv2_infer.py
src/lumiress/io/: __init__.py  downloader.py  io.py
src/lumiress/models/: mirnet_v2_arch.py  mirnetv2_arch.py  mirnetv2_builder.py
src/lumiress/ops/: ops.py
tests/: conftest.py
tests/infer/: test_mirnetv2_infer.py
tests/io/: test_downloader.py  test_io.py
tests/models/: test_mirnetv2.py  test_mirnetv2_builder.py  test_submodule.py
tests/ops/: test_ops.py
