[tool.poetry]
name = "lumiress"
version = "0.1.0"
description = ""
authors = ["Lalu Erfandi Maula Yusnu <nunenuh@gmaill.com>"]
readme = "README.md"
packages = [{include = "lumiress", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = {extras = ["all"], version = "^0.9.0"}
tensorflow = "^2.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.24.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
