[tool.poetry]
name = "lumiress"
version = "0.1.0"
description = ""
authors = ["Lalu Erfandi Maula Yusnu <nunenuh@gmaill.com>"]
readme = "README.md"
packages = [{include = "lumiress", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = {extras = ["all"], version = "^0.9.0"}
torch = "1.11.0+cpu"
torchvision = "0.12.0+cpu"
torchaudio = "0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.24.0"
pre-commit = "^3.3.3"
safety = "^2.3.5"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[[tool.poetry.source]]
name = "pytorch-cu102"
url = "https://download.pytorch.org/whl/cu102"
priority = "supplemental"


[[tool.poetry.source]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
